syntax = "proto3";
option go_package = "./";

package proto;

import "google/protobuf/empty.proto";

service Ohlc {
	rpc InitData(google.protobuf.Empty) returns (InitDataResponse) {}
    rpc GetSummary(GetSummaryRequest) returns (GetSummaryResponse) {}
}

message InitDataResponse {
	ResponseHeader response_header = 1;
}

message GetSummaryRequest {
    string stock_name = 1;
}

message GetSummaryResponse{
	ResponseHeader response_header = 1;
	string stock_name = 2;
    int64 previous_price = 3;
	int64 open_price = 4;
	int64 highest_price = 5;
	int64 lowest_price = 6;
	int64 close_price = 7;
	int64 average_price = 8;
	int64 volume = 9;
	int64 value = 10;
}


message ResponseHeader {
	bool success = 1;
	string error_message = 2;
	double process_time = 3;
}